cmake_minimum_required(VERSION 3.25)
project(RayTracingTheRestofYourLife)

set(CMAKE_CXX_STANDARD 17)
include_directories(../src)

add_executable(pi_v1 test/pi_v1.cpp)
add_executable(pi_v2 test/pi_v2.cpp)
add_executable(pi_v3 test/pi_v3.cpp)
add_executable(integrate_x_sq_v1 test/integrate_x_sq_v1.cpp)
add_executable(integrate_x_sq_v2 test/integrate_x_sq_v2.cpp)
add_executable(integrate_x_sq_v3 test/integrate_x_sq_v3.cpp)
add_executable(integrate_x_sq_v4 test/integrate_x_sq_v4.cpp)
add_executable(sphere_importance test/sphere_importance.cpp)
add_executable(cornell_box_v1 test/cornell_box_v1.cpp)
add_executable(cornell_box_v2 test/cornell_box_v2.cpp)
add_executable(sphere_plot test/sphere_plot.cpp)
add_executable(cos_cubed test/cos_cubed.cpp)
add_executable(cos_density test/cos_density.cpp)
add_executable(cornell_box_v3 test/cornell_box_v3.cpp)
add_executable(cornell_box_v4 test/cornell_box_v4.cpp)
add_executable(final_render main.cpp)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
